--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
   	<touch file="${crawler_lockupdate_file_live}" />
   
   	<!-- Copy all files from crawler-dev -->
-     <copy todir="${crawler_folder_live}" overwrite="false"> <!-- overwrite only newer files -->
+     <copy todir="${crawler_folder_live}" overwrite="false"> <!-- overwrite only newer files. Else use granularity="315360000000" -->
    	  	<fileset dir="${crawler_folder_dev}">
    	  		<exclude name="log/**" />
    	  		<exclude name="searchindex/**" />
@@ -55,19 +55,17 @@
 
     <!-- Modify config to suit live environment -->
     <xmltask source="${crawler_folder_live}/CrawlerConfiguration.xml" dest="${crawler_folder_live}/CrawlerConfiguration.xml">
-    	<replace path="configuration/startlist/start[1]/text()" withText="${crawler_files_folder_live}" />
-    	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='relativeFilenameBase']/text()" withText="${crawler_files_folder_live}"/>
+    	<replace path="configuration/startlist/start[1]/text()" withText="file://${crawler_files_folder_live}" />
+    	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='relativeFilenameBase']/text()" withText="file://${crawler_files_folder_live}"/>
     	
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='dbConnectionString']/text()" withText="${crawler_db_connection_live}" />
     	
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='thumbnailing']/param[@name='thumbnailFolder']/text()" withText="${crawler_db_thumbs_live}" />
     </xmltask>
-    
-    
+  	
     <!-- Release lock file -->
     <echo message="Telling the crawler that he can run again ..." />
     <delete file="${crawler_lockupdate_file_live}" failonerror="false" />
-  	
        	
   </target>
   
@@ -99,7 +97,7 @@
 	      	</not>
    	  </or>
 	</condition>
-       	<antcall target="-tomcat-create-dirs">
+    <antcall target="-tomcat-create-dirs">
 	</antcall>  
 
   	
