--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,7 @@
     <xmltask source="${crawler_folder_live}/CrawlerConfiguration.xml" dest="${crawler_folder_live}/CrawlerConfiguration.xml">
     	<replace path="configuration/startlist/start[1]/text()" withText="file://${crawler_files_folder_live}" />
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='relativeFilenameBase']/text()" withText="file://${crawler_files_folder_live}"/>
+    	<replace path="configuration/crawlerAccessController/config/param[@name='relativeFilenameBase']/text()" withText="file://${crawler_files_folder_live}"/>
     	
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='dbConnectionString']/text()" withText="${crawler_db_connection_live}" />
     	
