crawler plugin port

--- a/build.xml
+++ b/build.xml
@@ -62,6 +62,8 @@
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='dbConnectionString']/text()" withText="${crawler_db_connection_live}" />
     	
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='thumbnailing']/param[@name='thumbnailFolder']/text()" withText="${crawler_db_thumbs_live}" />
+    	
+    	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='externalHelpers']/param[@name='openOfficePort']/text()" withText="${crawler_ooo_port}"/>
     </xmltask>
   	
     <!-- Release lock file -->
