--- a/build.xml
+++ b/build.xml
@@ -58,14 +58,18 @@
 
     <!-- Modify config to suit live environment -->
     <xmltask source="${crawler_folder_live}/CrawlerConfiguration.xml" dest="${crawler_folder_live}/CrawlerConfiguration.xml">
+    	<!-- which files to index? -->
     	<replace path="configuration/startlist/start[1]/text()" withText="file://${crawler_files_folder_live}" />
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='relativeFilenameBase']/text()" withText="file://${crawler_files_folder_live}"/>
     	<replace path="configuration/crawlerAccessController/config/param[@name='relativeFilenameBase']/text()" withText="file://${crawler_files_folder_live}"/>
     	
+    	<!-- Connection string for database table file -->
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='database']/param[@name='dbConnectionString']/text()" withText="${crawler_db_connection_live}" />
     	
+    	<!-- Folder where the thumbnails are stored -->
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='thumbnailing']/param[@name='thumbnailFolder']/text()" withText="${crawler_db_thumbs_live}" />
     	
+    	<!-- Port of JODConverter OpenOffice-Service (of java-thumbnailer) -->
     	<replace path="configuration/crawlerPluginList/crawlerPlugin/config/section[@name='externalHelpers']/param[@name='openOfficePort']/text()" withText="${crawler_ooo_port}"/>
     </xmltask>
   	
@@ -116,11 +120,13 @@
    	</copy>
   	
   	<!-- Modify config to suit live environment -->
-    <xmltask source="${deploy_target_dir}/../conf/${tomcat_app_dev}/SearchConfiguration.xml" dest="${deploy_target_dir}/../conf/${tomcat_app_dev}/SearchConfiguration.xml">
+    <xmltask source="${deploy_target_dir}/../conf/${tomcat_app_live}/SearchConfiguration.xml" dest="${deploy_target_dir}/../conf/${tomcat_app_live}/SearchConfiguration.xml">
+    	<!-- Location of crawled searchindex -->
     	<replace path="configuration/indexList/index[1]/dir[1]/text()" withText="${crawler_folder_live}/searchindex" />
     </xmltask>
     <!-- Modify config to suit live environment -->
     <xmltask source="${deploy_target_dir}/${tomcat_app_live}/WEB-INF/web.xml" dest="${deploy_target_dir}/${tomcat_app_live}/WEB-INF/web.xml" public="//Sun Microsystems, Inc.//DTD Web Application 2.2//EN" system="http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
+    	<!-- Location of tomcat search config -->
     	<replace path="web-app/context-param[1]/param-value/text()" withText="../conf/${tomcat_app_live}/SearchConfiguration.xml" />
     </xmltask>
   	
